--- a/menu/src/componentes/Menu_Horizontal/menu-horizontal.css
+++ b/menu/src/componentes/Menu_Horizontal/menu-horizontal.css
@@ -1,58 +1,62 @@
-.menu{ 
+.menu {
     height: 40px;
     border: 1px solid rgb(214, 46, 16);
+    background-color: beige;
     padding-bottom: 8px;
     font-size: 16px;
-    background-color: wheat;
 }
 
-.navmenu::after {
+.navMenu::after{
     content: '';
     display: block;
     clear: both;
 }
 
-.navmenu ul {
+.navMenu ul {
     list-style: none;
     text-align: right;
+    
     display: flex;
 }
 
-.navmenu ul li {
-    display: inline;
-}
-
-.navmenu ul li a{
+.navMenu ul li a {
     padding-left: 2vw;
     display: inline-block;
     text-decoration: none;
     color: #333;
 }
 
-.navmenu ul li a:hover {
+.navMenu ul li a:hover {
     font-weight: bold;
     font-size: 20px;
     color: blue;
 }
 
-#inicio, #cursos, #contatos, #parceiros, #missao, 
-#sobre {
+/*
+    final configurações do menu principal
+*/
+
+/*
+    configuração das seções - âncoras
+*/
+
+#inicio, #cursos, #contatos, #parceiros, #missao, #sobre {
     border: 1px solid black;
     text-align: center;
 }
 
 #inicio {
-    height: 40vh;
-    background-color: greenyellow;    
+    height: 45vh;
+    background-color: greenyellow;
 }
 
 #cursos {
-    height: 45vh;
+    height: 40vh;
     background-color: hotpink;
 }
 
 #contatos {
-    height: 60vh;
+    height: 50vh;
     background-color: orange;
 }
 
@@ -71,96 +75,98 @@
     background-color: red;
 }
 
-/* 
-    Configuração ancoras
+/*
+    configurações do retorno das âncoras
 */
-.irTopo, .irinicio, .ircursos, .ircontatos, .irparceiros, .irmissao, .irsobre {
+
+.irTopo, .irInicio, .irCursos, .irContatos, .irParceiros, .irMissao, .irSobre {
     font-size: 12px;
     padding: 1vh;
     transition: 0.2s;
+
     position: fixed;
     right: 1vh;
+
     text-decoration: none;
     width: 90px;
     text-align: center;
-    border-radius: 4px;
+    border-radius: 4px;  
 }
 
-.irTopo{
+.irTopo {
     bottom: 14vh;
     color: white;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-.irTopo:hover{
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0,0,0,0.3);
 }
 
-.irinicio{
-    bottom: 82vh;
+.irTopo:hover {
+    background-color: rgba(0,0,0,0.6);
+}
+
+.irInicio {
+    bottom: 75vh;
     color: green;
     background-color: bisque;
 }
 
-.irinicio:hover{
-    background-color: greenyellow;
+.irInicio:hover {
+    background-color: darkorange;
 }
 
-
-.ircursos{
-    bottom: 78vh;
+.irCursos {
+    bottom: 71vh;
     color: black;
     background-color: cyan;
 }
 
-.ircursos:hover{
-    background-color: hotpink;
+.irCursos:hover {
+    background-color: darkmagenta;
 }
 
-.ircontatos{
-    bottom: 74vh;
+.irContatos {
+    bottom: 67vh;
     color: white;
     background-color: darkblue;
 }
 
-.ircontatos:hover{
-    background-color: orange;
+.irContatos:hover {
+    background-color: red;
 }
 
-.irparceiros{
-    bottom: 70vh;
+.irParceiros {
+    bottom: 63vh;
     color: darkred;
     background-color: gray;
 }
 
-.irparceiros:hover{
-    background-color: thistle;
+.irParceiros:hover {
+    background-color: black;
 }
 
-.irmissao{
-    bottom: 66vh;
+.irMissao {
+    bottom: 59vh;
     color: indigo;
     background-color: green;
 }
 
-.irmissao:hover{
-    background-color: yellow;
+.irMissao:hover {
+    background-color: mediumaquamarine;
 }
 
-.irsobre{
-    bottom: 62vh;
+.irSobre {
+    bottom: 55vh;
     color: indigo;
     background-color: salmon;
 }
 
-.irsobre:hover{
-    background-color: red;
+.irSobre:hover {
+    background-color: greenyellow;
 }
 
 /*
-    Configurações do aside do lado esquedo
+    configurações do aside (menu lateral esquerdo)
 */
-
-.aside a{
+.aside a {
     position: fixed;
     left: -5vw;
     transition: 0.2s;
@@ -168,37 +174,40 @@
     width: 5vw;
     text-decoration: none;
     font-size: 16px;
-    color: #ffff;
+    color: #fff;
     border-radius: 0 15px 15px 0;
 }
 
-.aside a:hover{
+.aside a:hover {
     left: 0;
 }
 
-#inicio2{
-    top: 16vh;
+#inicio2 {
+    top: 20vh;
     background-color: blue;
 }
-#cursos2{
+
+#cursos2 {
     top: 30vh;
     background-color: red;
 }
 
-#contatos2{
+#contatos2 {
     top: 40vh;
     background-color: black;
 }
-#parceiros2{
+
+#parceiros2 {
     top: 50vh;
     background-color: cyan;
 }
-#missao2{
+
+#missao2 {
     top: 60vh;
-    background-color: greenyellow;
-}
-#sobre2{
-    top: 70vh;
-    background-color: violet;
+    background-color: rgba(0, 255, 115, 0.28);
 }
 
+#sobre2 {
+    top: 70vh;
+    background-color: salmon;
+}
