--- a/menu/src/componentes/Inicio/Inicio.css
+++ b/menu/src/componentes/Inicio/Inicio.css
@@ -1,10 +1,19 @@
-.inicio, .cursos, .contatos, .parceiros, .missao, 
-.sobre, .titulo, footer {
+.inicio, .cursos, .contatos, .parceiros, .missao, .sobre, .titulo, footer {
     border: 1px solid black;
     text-align: center;
 }
 
 .inicio {
     height: 90vh;
-    background-color: rgb(247, 162, 220);    
+    background-color: rgb(247, 162, 232, 220);
+}
+
+#confirmar {
+    margin: 6vh;
+}
+
+#logo {
+    width: 320px;
+    height: 160px;
+    align-items: center;
 }
