--- a/menu/src/index.css
+++ b/menu/src/index.css
@@ -1,4 +1,7 @@
-body {
+body, html {
+  height: 95vh;
+  width: 100vw;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,6 +10,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  border: 0.5px solid blue;
+
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
